Fix T82675: Crash on exit when Blender is built as a Python module